--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,visualstudiocode,webstorm,windows,linux,sass
+
+### Composer ###
+composer.phar
+/vendor/
